css selectors :art:

--- a/s2css/index.html
+++ b/s2css/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,64 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+    <h1 id="main-heading" class="text-italic">¡¡¡Hola koders!!!</h1>
+    <h2 class="text-italic">bienvenidos</h2>
+    <h3 class="text-italic">a su segunda</h3>
+    <h4 class="text-italic">sesión de </h4>
+    <h5 class="text-italic">Maravilloso</h5>
+    <h6 class="text-italic text-oblique">CSS!!!</h6>
+
+    <ul class="lista-tipo-1"><!--lista 1-->
+        <li class="clase-1">Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>
+            <ul>
+                <li>subitem 1</li>
+                <li>subitem 2</li>
+                <li>subitem 3</li>
+            </ul>
+        </li>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum aut animi impedit commodi quaerat fugit eius adipisci sed voluptatum autem!</p>
+    </ul>
+
+    <ul class="lista-tipo-2">
+        <li>Item 2</li>
+        <li class="active">Item 3</li>
+        <li>Item 1</li>
+        <li>Item 4</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+    </ul>
+
+    <ul class="lista-tipo-3">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+        <li>item 5</li>
+        <li>item 6</li>
+        <li>item 7</li>
+        <li>item 8</li>
+        <li>item 9</li>
+        <li>item 10</li>
+        <li>item 11</li>
+        <li>item 12</li>
+        <li>item 13</li>
+    </ul>
+
+    <nav>
+        <ul>
+            <li><a href="">link 1</a></li>
+            <li><a href="" class="active">link 2</a></li>
+            <li><a href="">link 3</a></li>
+        </ul>
+    </nav>
     
+
 </body>
+
 </html>
