--- a/s5sass_mediaqueries/index.html
+++ b/s5sass_mediaqueries/index.html
@@ -11,17 +11,50 @@
     <title>Document</title>
 </head>
 
+
 <body>
-    <div class="card">
-        <p class="name">Basic</p>
-        <h2 class="price"><span>$</span><b>199.99</b></h2>
-        <ul>
-            <li>500 GB Storage</li>
-            <li>2 Users Allowed</li>
-            <li>Send up to 3GB</li>
-        </ul>
-        <button type="button" class="btn btn-primary"> <span>Learn More</span> </button>
+    <div class="card-wrapper">
+        <div class="card">
+            <p class="name">Basic</p>
+            <h2 class="price">
+                <span>$</span>
+                <b>199.99</b>
+            </h2>
+            <ul>
+                <li>500 GB Storage</li>
+                <li>2 Users Allowed</li>
+                <li>Send up to 3GB</li>
+            </ul>
+            <button type="button" class="btn btn-primary"> <span>Learn More</span> </button>
+        </div>
+        <div class="card">
+            <p class="name">Basic</p>
+            <h2 class="price">
+                <span>$</span>
+                <b>199.99</b>
+            </h2>
+            <ul>
+                <li>500 GB Storage</li>
+                <li>2 Users Allowed</li>
+                <li>Send up to 3GB</li>
+            </ul>
+            <button type="button" class="btn btn-primary"> <span>Learn More</span> </button>
+        </div>
+        <div class="card">
+            <p class="name">Basic</p>
+            <h2 class="price">
+                <span>$</span>
+                <b>199.99</b>
+            </h2>
+            <ul>
+                <li>500 GB Storage</li>
+                <li>2 Users Allowed</li>
+                <li>Send up to 3GB</li>
+            </ul>
+            <button type="button" class="btn btn-primary"> <span>Learn More</span> </button>
+        </div>
     </div>
+
 </body>
 
 </html>
