--- a/s5sass_mediaqueries/index.html
+++ b/s5sass_mediaqueries/index.html
@@ -28,7 +28,7 @@
             <button type="button" class="btn btn-primary"> <span>Learn More</span> </button>
         </div>
         <div class="card">
-            <p class="name">Basic</p>
+            <p class="name">Intermediate</p>
             <h2 class="price">
                 <span>$</span>
                 <b>199.99</b>
@@ -41,7 +41,7 @@
             <button type="button" class="btn btn-primary"> <span>Learn More</span> </button>
         </div>
         <div class="card">
-            <p class="name">Basic</p>
+            <p class="name">Pro</p>
             <h2 class="price">
                 <span>$</span>
                 <b>199.99</b>
