--- a/colaborative/index.html
+++ b/colaborative/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="hamburger-wrapper">
+    <div class="hamburger-wrapper d-flex">
         <label for="check" class="hamb-button">
             
         </label>
