--- a/colaborative/index.html
+++ b/colaborative/index.html
@@ -16,12 +16,17 @@
             
         </label>
         <input id="check" type="checkbox">
-        <ul>
-            <li>item 1</li>
-            <li>item 2</li>
-            <li>item 3</li>
-            <li>item 4</li>
-            <li>item 5</li>
+        <ul class="some-class">
+            <li>item 001</li>
+            <li>item 002</li>
+            <li>item 003</li>
+            <li>item 004</li>
+            <li>item 005</li>
+            <li>item 006</li>
+            <li>item 007</li>
+            <li>item 008</li>
+            <li>item 009</li>
+            <li>item 010</li>
         </ul>
     </div>
 
@@ -45,3 +50,21 @@
 </body>
 
 </html>
+
+
+<!--Isra-->
+
+<!---->
+
+
+<!--Demian-->
+
+<!---->
+
+<!--Jonathan-->
+
+<!---->
+
+<!--David-->
+
+<!---->
