--- a/colaborative/index.html
+++ b/colaborative/index.html
@@ -16,17 +16,11 @@
             
         </label>
         <input id="check" type="checkbox">
-        <ul class="some-class">
-            <li>item 001</li>
-            <li>item 002</li>
-            <li>item 003</li>
-            <li>item 004</li>
-            <li>item 005</li>
-            <li>item 006</li>
-            <li>item 007</li>
-            <li>item 008</li>
-            <li>item 009</li>
-            <li>item 010</li>
+        <ul class="some-class some other class">
+            <li>item 00001</li>
+            <li>item 00002</li>
+            <li>item 00003</li>
+            <li>item 00004</li>
         </ul>
     </div>
 
