--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>hello</h1>
+    <a href="s6qa/index.html">s6</a>
     <a href="s7bootstrap/index.html">s7</a>
 </body>
 </html>
