--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=h, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <title>Raziel Dev</title>
 </head>
 <body>
-    <h1>hello asdf</h1>
-    <a href="s6qa/index.html">s6</a>
-    <a href="s7bootstrap/index.html">s7</a>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <a href="p1bootstrap_layouts/" target="_blank">p1 bootstrap layouts</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="s5sass_mediaqueries/index.html" target="_blank">s5 sass</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
