--- a/s19jquery/index.html
+++ b/s19jquery/index.html
@@ -49,6 +49,21 @@
             </div>
         </div>
     </div>
+    <div id="mutable-shape"></div>
+    <div class="controls-wrapper">
+        <label for="square">Square</label>
+        <input id="square" name="shape-radio" type="radio" value="square">
+        <label for="rectangle">Rectangle</label>
+        <input id="rectangle" name="shape-radio" type="radio" value="rectangle">
+        <label for="circle">Circle</label>
+        <input id="circle" name="shape-radio" type="radio" value="circle">
+    </div>
+
+    
+
+    <form class="border p-3">
+        <button disabled>Guardar</button>
+    </form>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
