--- a/s20jqueryajax/index.html
+++ b/s20jqueryajax/index.html
@@ -11,10 +11,30 @@
 </head>
 
 <body>
-    <div class="card">
-        <div class="card-body">
-            <div class="card-title">Un título</div>
-            <div class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor est, maiores a illum quod laboriosam fugit ut esse aliquid quos?</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <form action="" class="bg-dark p-3 border rounded text-white">
+                    <div class="form-group">
+                        <label for="">Nombre</label>
+                        <input name="name" type="text" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Email</label>
+                        <input name="email" type="text" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Teléfono</label>
+                        <input name="phone" type="text" class="form-control">
+                    </div>
+                    <div class="btn btn-block btn-outline-success save-mentor">Guardar Mentor</div>
+                </form>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="row mentors-wrapper">
+                    
+                </div>
+            </div>
         </div>
     </div>
     <div id="content-wrapper"></div>
