--- a/jqueryGallery/index.html
+++ b/jqueryGallery/index.html
@@ -7,19 +7,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.scss">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 
 </head>
 
 <body>
-    <div class="w-50 gallery-wrapper mx-auto mt-3 border d-flex flex-column">
-        <img src="https://picsum.photos/id/169/500/300" alt="">
-        <h1>Caption de la imagen</h1>
-        <div class="controls-wrapper d-flex justify-content-between border">
-            <button type="button" class="btn btn-primary backward">Atrás</button>
-            <button type="button" class="d-none add-slides btn btn-success">Agregar</button>
-            <button type="button" class="btn btn-primary forward">Adelante</button>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            </div>
+        </div>
+        <div class="user-data d-flex align-items-center">
+            <span class="user-name">test</span>
+            <div class="user-avatar"></div>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <form id="post-form" action="" class="mt-3 p-3 border rounded bg-dark text-white">
+                    <h1>Crear post</h1>
+                    <div class="form-group">
+                        <label for="">Title</label>
+                        <input type="text" class="form-control" name="title" value="My awesome post">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Content</label>
+                        <input type="text" class="form-control" name="content"
+                            value="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit et harum modi eius reprehenderit similique aperiam deserunt, odio magni obcaecati!">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Cover</label>
+                        <input type="text" class="form-control" name="coverUrl"
+                            value="https://picsum.photos/id/150/300">
+                    </div>
+                    <button id="save-post" type="button" class="btn btn-primary">Save Post</button>
+                </form>
+            </div>
+            <div id="posts-wrapper" class="col-12 col-md-6">
+                <div class="card mb-3">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                            <img src="..." alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
