--- a/commentsAndReplies/index.html
+++ b/commentsAndReplies/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row posts-wrapper">
             <div class="col-12">
                 <div class="card mb-3">
                     <div class="row no-gutters">
