--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                     <li class="list-group-item">
                         <a href="s5sass_mediaqueries/index.html" target="_blank">s5 sass</a>
                     </li>
+                    <li class="list-group-item">
+                        <a href="s22extras/index.html" target="_blank">Firebase</a>
+                    </li>
                 </ul>
             </div>
         </div>
