--- a/s22extras/index.html
+++ b/s22extras/index.html
@@ -40,7 +40,23 @@
                   </div>
             </div>
         </div>
-        <div id="car-wrapper" class="row">
+        <div  class="row">
+            <div class="col-12 col-md-6">
+                <form id="car-form" action="" class="bg-dark text-white p-3 border rounded">
+                    <div class="form-group">
+                        <label for="">Brand</label>
+                        <input type="text" class="form-control" name="brand" value="Dodge">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Model</label>
+                        <input type="text" class="form-control" name="model" value="Neon">
+                    </div>
+                    <button id="save-car" type="button" class="btn btn-success">save car</button>
+                </form>
+            </div>
+            <div class="col-12 col-md-6">
+                <div id="car-wrapper"class="row "></div>
+            </div>
 
         </div>
     </div>
